Revert "Added Process class"
This reverts commit e323ef9b4d4db6b0c3b8408f1914acfcf94cb5a6.

--- a/Process Scheduler.vcxproj
+++ b/Process Scheduler.vcxproj
@@ -127,13 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DS Implementations\BTNode.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Program Classes\Process.cpp" />
+    <ClInclude Include="Process class.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DS Implementations\BTNode.h" />
-    <ClInclude Include="Program Classes\Process.h" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
