--- a/Process Scheduler.vcxproj
+++ b/Process Scheduler.vcxproj
@@ -135,11 +135,11 @@
     <ClCompile Include="Program Classes\SJF.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="D:\Sophomore Level\Second Term\Data Structure\Project\DS Implementations\LinkedList.h" />
-    <ClInclude Include="D:\Sophomore Level\Second Term\Data Structure\Project\DS Implementations\LinkedQueue.h" />
-    <ClInclude Include="D:\Sophomore Level\Second Term\Data Structure\Project\DS Implementations\Node.h" />
-    <ClInclude Include="D:\Sophomore Level\Second Term\Data Structure\Project\DS Implementations\QueueADT.h" />
     <ClInclude Include="DS Implementations\BTNode.h" />
+    <ClInclude Include="DS Implementations\LinkedList.h" />
+    <ClInclude Include="DS Implementations\LinkedQueue.h" />
+    <ClInclude Include="DS Implementations\Node.h" />
+    <ClInclude Include="DS Implementations\QueueADT.h" />
     <ClInclude Include="Program Classes\FCFS.h" />
     <ClInclude Include="Program Classes\Process.h" />
     <ClInclude Include="Program Classes\Processor.h" />
