--- a/Process Scheduler.vcxproj
+++ b/Process Scheduler.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DS Implementations\BTNode.cpp" />
+    <ClCompile Include="DS Implementations\BTree.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Program Classes\FCFS.cpp" />
     <ClCompile Include="Program Classes\Process.cpp" />
@@ -136,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DS Implementations\BTNode.h" />
+    <ClInclude Include="DS Implementations\BTree.h" />
     <ClInclude Include="DS Implementations\LinkedList.h" />
     <ClInclude Include="DS Implementations\LinkedQueue.h" />
     <ClInclude Include="DS Implementations\Node.h" />
