Added GetHeadData fn to LinkedList

--- a/Process Scheduler.vcxproj
+++ b/Process Scheduler.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="DS Implementations\LinkedQueue.h" />
     <ClInclude Include="DS Implementations\Node.h" />
     <ClInclude Include="DS Implementations\QueueADT.h" />
+    <ClInclude Include="PQueue.h" />
     <ClInclude Include="Program Classes\FCFS.h" />
     <ClInclude Include="Program Classes\Process.h" />
     <ClInclude Include="Program Classes\Processor.h" />
