--- a/Process Scheduler.vcxproj.filters
+++ b/Process Scheduler.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClInclude Include="Program Classes\Scheduler.h">
       <Filter>Header Files\Program Classes</Filter>
     </ClInclude>
+    <ClInclude Include="PQueue.h">
+      <Filter>Header Files\DS Implementations</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
