Converted all DS to templates , changed the algorithm of LinkedQueue's destructor to a simpler one.

--- a/Process Scheduler.vcxproj.filters
+++ b/Process Scheduler.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClInclude Include="DS Implementations\PQueue.h">
       <Filter>Header Files\DS Implementations</Filter>
     </ClInclude>
+    <ClInclude Include="DS Implementations\PNode.h">
+      <Filter>Header Files\DS Implementations</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
