--- a/Process Scheduler.vcxproj
+++ b/Process Scheduler.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="DS Implementations\LinkedList.h" />
     <ClInclude Include="DS Implementations\LinkedQueue.h" />
     <ClInclude Include="DS Implementations\Node.h" />
+    <ClInclude Include="DS Implementations\PNode.h" />
     <ClInclude Include="DS Implementations\PQueue.h" />
     <ClInclude Include="DS Implementations\QueueADT.h" />
     <ClInclude Include="Program Classes\FCFS.h" />
