Created UI class

--- a/Process Scheduler.vcxproj
+++ b/Process Scheduler.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Program Classes\RR.cpp" />
     <ClCompile Include="Program Classes\Scheduler.cpp" />
     <ClCompile Include="Program Classes\SJF.cpp" />
+    <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DS Implementations\BTNode.h" />
@@ -151,6 +152,7 @@
     <ClInclude Include="Program Classes\RR.h" />
     <ClInclude Include="Program Classes\Scheduler.h" />
     <ClInclude Include="Program Classes\SJF.h" />
+    <ClInclude Include="UI.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
