--- a/Process Scheduler.vcxproj.filters
+++ b/Process Scheduler.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Program Classes\Scheduler.cpp">
       <Filter>Source Files\Program Classes</Filter>
     </ClCompile>
+    <ClCompile Include="UI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Program Classes\Process.h">
@@ -77,9 +80,6 @@
     <ClInclude Include="DS Implementations\LinkedQueue.h">
       <Filter>Header Files\DS Implementations</Filter>
     </ClInclude>
-    <ClInclude Include="DS Implementations\Node.h">
-      <Filter>Header Files\DS Implementations</Filter>
-    </ClInclude>
     <ClInclude Include="DS Implementations\QueueADT.h">
       <Filter>Header Files\DS Implementations</Filter>
     </ClInclude>
@@ -94,6 +94,9 @@
     </ClInclude>
     <ClInclude Include="DS Implementations\PNode.h">
       <Filter>Header Files\DS Implementations</Filter>
+    </ClInclude>
+    <ClInclude Include="UI.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
