--- a/Process Scheduler.vcxproj
+++ b/Process Scheduler.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Program Classes\EDF.cpp" />
     <ClCompile Include="Program Classes\FCFS.cpp" />
     <ClCompile Include="Program Classes\Process.cpp" />
     <ClCompile Include="Program Classes\RR.cpp" />
@@ -142,6 +143,7 @@
     <ClInclude Include="DS Implementations\PNode.h" />
     <ClInclude Include="DS Implementations\PQueue.h" />
     <ClInclude Include="DS Implementations\QueueADT.h" />
+    <ClInclude Include="Program Classes\EDF.h" />
     <ClInclude Include="Program Classes\FCFS.h" />
     <ClInclude Include="Program Classes\Process.h" />
     <ClInclude Include="Program Classes\Processor.h" />
