--- a/Process Scheduler.vcxproj.filters
+++ b/Process Scheduler.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Program Classes\UI.cpp">
       <Filter>Source Files\Program Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Program Classes\EDF.cpp">
+      <Filter>Source Files\Program Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Program Classes\Process.h">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Program Classes\UI.h">
+      <Filter>Header Files\Program Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Program Classes\EDF.h">
       <Filter>Header Files\Program Classes</Filter>
     </ClInclude>
   </ItemGroup>
