--- a/Process Scheduler.vcxproj.filters
+++ b/Process Scheduler.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Program Classes\EDF.cpp">
       <Filter>Source Files\Program Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Processor.cpp">
+      <Filter>Source Files\Program Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Program Classes\Process.h">
@@ -89,10 +92,10 @@
     <ClInclude Include="DEFS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Program Classes\EDF.h">
+    <ClInclude Include="Program Classes\UI.h">
       <Filter>Header Files\Program Classes</Filter>
     </ClInclude>
-    <ClInclude Include="Program Classes\UI.h">
+    <ClInclude Include="Program Classes\EDF.h">
       <Filter>Header Files\Program Classes</Filter>
     </ClInclude>
   </ItemGroup>
